--- a/NLP/BenchmarkNerAlgorithm/EDA.ipynb
+++ b/NLP/BenchmarkNerAlgorithm/EDA.ipynb
@@ -13,21 +13,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "36e11894",
    "metadata": {},
    "source": [
     "## Paquetes\n",
     "\n",
-    "Estos son los paquetes requeridos para este EDA\n",
-    "\n",
-    "- pandas 1.3.5\n",
-    "- nltk 3.3.0\n",
-    "- numpy 1.16.1\n",
-    "- spacy 3.0.6\n",
-    "- unidecode 1.3.6\n",
-    "- langdetect 1.0.9\n",
-    "- sckit-learn 0.20.1"
+    "Todos los paquetes necesarios se encuentran descritos en el archivo de `requirements.txt`"
    ]
   },
   {
@@ -2438,7 +2431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
