--- a/NLP/BenchmarkNerAlgorithm/EDA.ipynb
+++ b/NLP/BenchmarkNerAlgorithm/EDA.ipynb
@@ -33,6 +33,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3244af00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python -m spacy download en_core_web_lg"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "73f83531",
    "metadata": {
