--- a/NLP/BenchmarkNerAlgorithm/translate.ipynb
+++ b/NLP/BenchmarkNerAlgorithm/translate.ipynb
@@ -46,30 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_translation(dataset, translation_results):\n",
-    "    for test, translation in zip(dataset, translation_results):\n",
-    "        if len(translation.split()) > 1:\n",
-    "            if translation.replace(\".\", \"\") == test[1]:\n",
-    "                print(f\"Succes on test {test} result: '{translation}'\")\n",
-    "            else:\n",
-    "                print(f\"Different result on test {test} result: '{translation}'\")\n",
-    "        else:\n",
-    "            if translation == test[1]:\n",
-    "                print(f\"Succes on test {test} result: '{translation}'\")\n",
-    "            else:\n",
-    "                print(f\"Error on test {test} attempt: '{translation}'\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### SSL Error by trying with this source: [How to translate text with python](https://medium.com/analytics-vidhya/how-to-translate-text-with-python-9d203139dcf5)"
+    "word_test = [('pan', 'bread'),('morado', 'purple'),('policia', 'police'),('cometa', 'kite'),('pasta de dientes', 'toothpaste')]\n",
+    "phrase_test = [('Eso no es para mí', \"That's not for me\"), ('Los coches rojos están detrás de mí ', \"The red cars are behind me\"), ('El agua está muy caliente', \"The water's very hot\"), ('No te pongas esa corbata', \"Don't wear that tie\"), ('Poca gente tiene lo que tú tienes', \"Few people have what you have\")]"
    ]
   },
   {
@@ -78,12 +60,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from deep_translator import GoogleTranslator, PonsTranslator, LingueeTranslator, MyMemoryTranslator\n",
-    "# to_translate = 'I want to translate this text'\n",
-    "# translated = GoogleTranslator(source='auto', target='de').translate(to_translate)\n",
-    "# # outpout -> Ich möchte diesen Text übersetzen\n",
+    "from typing import Tuple, List\n",
+    "from nltk.translate.bleu_score import sentence_bleu\n",
     "\n",
-    "# # SSLError: HTTPSConnectionPool(host='translate.google.com', port=443): Max retries exceeded with url: /m?tl=de&sl=auto&q=I+want+to+translate+this+text (Caused by SSLError(SSLCertVerificationError(1, '[SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:997)')))"
+    "def test_translation(dataset: Tuple[str], translation_results: List[str]):\n",
+    "    for test, translation in zip(dataset, translation_results):\n",
+    "        format_translation = translation.replace('.','')\n",
+    "        reference = [format_translation.lower().split()]\n",
+    "        hypothesis = test[1].lower().split()\n",
+    "        if len(translation.split()) > 1:\n",
+    "            score = sentence_bleu(reference, hypothesis)\n",
+    "            print(f'BLEU Score of: {score} - For test: {test} - Translation: {format_translation}')\n",
+    "        else:\n",
+    "            if translation == test[1]:\n",
+    "                print(f\"Succes on test: {test} Translation: '{format_translation}'\")\n",
+    "            else:\n",
+    "                print(f\"Error on test: {test} Translation: '{format_translation}'\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On Apex: SSL Error by trying with this source: [How to translate text with python](https://medium.com/analytics-vidhya/how-to-translate-text-with-python-9d203139dcf5)\n",
+    "\n",
+    "```python\n",
+    "# SSLError: HTTPSConnectionPool(host='translate.google.com', port=443): Max retries exceeded with url: /m?tl=de&sl=auto&q=I+want+to+translate+this+text (Caused by SSLError(SSLCertVerificationError(1, '[SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:997)')))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deep_translator import GoogleTranslator, LingueeTranslator, MyMemoryTranslator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLEU Score of: 1.0 - For test: ('Eso no es para mí', \"That's not for me\") - Translation: That's not for me\n",
+      "BLEU Score of: 1.0 - For test: ('Los coches rojos están detrás de mí ', 'The red cars are behind me') - Translation: The red cars are behind me\n",
+      "BLEU Score of: 8.214546595247418e-155 - For test: ('El agua está muy caliente', \"The water's very hot\") - Translation: the water is very hot\n",
+      "BLEU Score of: 1.0 - For test: ('No te pongas esa corbata', \"Don't wear that tie\") - Translation: don't wear that tie\n",
+      "BLEU Score of: 1.0 - For test: ('Poca gente tiene lo que tú tienes', 'Few people have what you have') - Translation: Few people have what you have\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pacobuntuwsl2/repos/apx-ai-devs/venv/lib/python3.8/site-packages/nltk/translate/bleu_score.py:552: UserWarning: \n",
+      "The hypothesis contains 0 counts of 3-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "/home/pacobuntuwsl2/repos/apx-ai-devs/venv/lib/python3.8/site-packages/nltk/translate/bleu_score.py:552: UserWarning: \n",
+      "The hypothesis contains 0 counts of 4-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_translation(phrase_test, [GoogleTranslator(source='es', target='en').translate(x[0]) for x in phrase_test])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLEU Score of: 0 - For test: ('Eso no es para mí', \"That's not for me\") - Translation: What a pity this season\n",
+      "BLEU Score of: 1.0 - For test: ('Los coches rojos están detrás de mí ', 'The red cars are behind me') - Translation: The red cars are behind me\n",
+      "BLEU Score of: 1.5319719891192393e-231 - For test: ('El agua está muy caliente', \"The water's very hot\") - Translation: The water is hot\n",
+      "BLEU Score of: 1.0 - For test: ('No te pongas esa corbata', \"Don't wear that tie\") - Translation: Don't wear that tie\n",
+      "BLEU Score of: 1.0 - For test: ('Poca gente tiene lo que tú tienes', 'Few people have what you have') - Translation: Few people have what you have\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pacobuntuwsl2/repos/apx-ai-devs/venv/lib/python3.8/site-packages/nltk/translate/bleu_score.py:552: UserWarning: \n",
+      "The hypothesis contains 0 counts of 2-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_translation(phrase_test, [MyMemoryTranslator(source='es', target='en').translate(x[0]) for x in phrase_test])"
    ]
   },
   {
@@ -104,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,30 +232,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Succes on test ('pan', 'bread') result: 'bread'\n",
-      "Succes on test ('morado', 'purple') result: 'purple'\n",
-      "Succes on test ('policia', 'police') result: 'police'\n",
-      "Succes on test ('cometa', 'kite') result: 'kite'\n",
-      "Succes on test ('pasta de dientes', 'toothpaste') result: 'toothpaste'\n"
-     ]
-    }
-   ],
-   "source": [
-    "word_test = [('pan', 'bread'),('morado', 'purple'),('policia', 'police'),('cometa', 'kite'),('pasta de dientes', 'toothpaste')]\n",
-    "word_translation = [argostranslate.translate.translate(x[0], from_code, to_code) for x in word_test]\n",
-    "\n",
-    "test_translation(word_test, word_translation)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -178,19 +239,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Succes on test ('Eso no es para mí', \"That's not for me\") result: 'That's not for me.'\n",
-      "Succes on test ('Los coches rojos están detrás de mí ', 'The red cars are behind me') result: 'The red cars are behind me'\n",
-      "Different result on test ('El agua está muy caliente', \"The water's very hot\") result: 'The water is very hot'\n",
-      "Succes on test ('No te pongas esa corbata', \"Don't wear that tie\") result: 'Don't wear that tie.'\n",
-      "Succes on test ('Poca gente tiene lo que tú tienes', 'Few people have what you have') result: 'Few people have what you have'\n"
+      "Succes on test: ('pan', 'bread') Translation: 'bread'\n",
+      "Succes on test: ('morado', 'purple') Translation: 'purple'\n",
+      "Succes on test: ('policia', 'police') Translation: 'police'\n",
+      "Succes on test: ('cometa', 'kite') Translation: 'kite'\n",
+      "Succes on test: ('pasta de dientes', 'toothpaste') Translation: 'toothpaste'\n"
      ]
     }
    ],
    "source": [
-    "phrase_test = [('Eso no es para mí', \"That's not for me\"), ('Los coches rojos están detrás de mí ', \"The red cars are behind me\"), ('El agua está muy caliente', \"The water's very hot\"), ('No te pongas esa corbata', \"Don't wear that tie\"), ('Poca gente tiene lo que tú tienes', \"Few people have what you have\")]\n",
-    "phrase_translation = [argostranslate.translate.translate(x[0], from_code, to_code) for x in phrase_test]\n",
-    "\n",
-    "test_translation(phrase_test, phrase_translation)"
+    "test_translation(word_test, [argostranslate.translate.translate(x[0], from_code, to_code) for x in word_test])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLEU Score of: 1.0 - For test: ('Eso no es para mí', \"That's not for me\") - Translation: That's not for me\n",
+      "BLEU Score of: 1.0 - For test: ('Los coches rojos están detrás de mí ', 'The red cars are behind me') - Translation: The red cars are behind me\n",
+      "BLEU Score of: 8.214546595247418e-155 - For test: ('El agua está muy caliente', \"The water's very hot\") - Translation: The water is very hot\n",
+      "BLEU Score of: 1.0 - For test: ('No te pongas esa corbata', \"Don't wear that tie\") - Translation: Don't wear that tie\n",
+      "BLEU Score of: 1.0 - For test: ('Poca gente tiene lo que tú tienes', 'Few people have what you have') - Translation: Few people have what you have\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pacobuntuwsl2/repos/apx-ai-devs/venv/lib/python3.8/site-packages/nltk/translate/bleu_score.py:552: UserWarning: \n",
+      "The hypothesis contains 0 counts of 3-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "/home/pacobuntuwsl2/repos/apx-ai-devs/venv/lib/python3.8/site-packages/nltk/translate/bleu_score.py:552: UserWarning: \n",
+      "The hypothesis contains 0 counts of 4-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_translation(phrase_test, [argostranslate.translate.translate(x[0], from_code, to_code) for x in phrase_test])"
    ]
   }
  ],
@@ -210,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
